compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__unit_with_bits_option_variable_size.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main(x, size) {\n  <<x:bits-size(size)-unit(8)>>\n}\n"
---
----- SOURCE CODE

pub fn main(x, size) {
  <<x:bits-size(size)-unit(8)>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/2]).

-file("project/test/my/mod.gleam", 2).
-spec main(bitstring(), integer()) -> bitstring().
main(X, Size) ->
    <<X:(erlang:max(0, Size * 8))/bitstring>>.
