compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__unit_with_bits_option_variable_size_pattern.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main(x, size) {\n  let assert <<a:size(size)-unit(8)-bits, _:bits>> = x\n  a\n}\n"
---
----- SOURCE CODE

pub fn main(x, size) {
  let assert <<a:size(size)-unit(8)-bits, _:bits>> = x
  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/2]).

-file("project/test/my/mod.gleam", 2).
-spec main(bitstring(), integer()) -> bitstring().
main(X, Size) ->
    case X of
        <<A:Size/bitstring-unit:8, _/bitstring>> ->
            A;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                value => _value,
                start => 26,
                'end' => 78,
                pattern_start => 37,
                pattern_end => 74
            })
    end.
