compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__utf32_codepoint_little_endian.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn go(codepoint) {\n  <<codepoint:utf32_codepoint-little>>\n}\n"
---
----- SOURCE CODE

pub fn go(codepoint) {
  <<codepoint:utf32_codepoint-little>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(integer()) -> bitstring().
go(Codepoint) ->
    <<Codepoint/utf32-little>>.
