compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__variable_utf32_little_string.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn go(wibble: String) {\n  <<wibble:utf32-little>>\n}\n"
---
----- SOURCE CODE

pub fn go(wibble: String) {
  <<wibble:utf32-little>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(binary()) -> bitstring().
go(Wibble) ->
    <<(unicode:characters_to_binary(Wibble, utf8, {utf32, little}))/binary>>.
